# cbcbeatx

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  README.md  _config.yml  index.md  pyproject.toml
.github/workflows/: build_docs.yml  check_formatting.yml  deploy.yml  docker-image.yml  pre-commit.yml  test_package.yml  test_stable.yml
docker/: Dockerfile
docs/: api.rst
src/cbcbeatx/: __init__.py  __main__.py  cli.py  markerwisefield.py  monodomainsolver.py
tests/: test_monodomain.py  test_version.py
