[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "cbcbeatx"
version = "0.8.0"
description = "A framework for computational cardiac electrophysiology"
authors = [{ name = "Jørgen S. Dokken", email = "dokken@simula.no" }]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = ["fenics-dolfinx>=0.8.0"]

[project.scripts]
cbcbeatx = "cbcbeatx.cli:main"

[project.optional-dependencies]
test = ["pytest"]
dev = ["pdbpp", "ipython", "mypy", "black", "ruff"]
docs = ["jupyter-book", "jupytext"]
all = ["cbcbeatx[test]", "cbcbeatx[dev]", "cbcbeatx[docs]"]


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
# Folders to exclude
exclude = ["docs/", "build/"]
# Folder to check with mypy
files = ["src", "tests"]


[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
indent-width = 4
allowed-confusables = ["σ"]

[tool.ruff.lint]
select = [
    # "B",
    # "D", # pydocstyle
    "E",   # pycodestyle
    "W",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "RUF", # Ruff-specific rules
    "UP",  # pyupgrade
    # "ANN",
    "ICN",
    # "SIM",
    # "PL",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["cbcbeatx"]
known-third-party = [
    "basix",
    "dolfinx",
    "ffcx",
    "ufl",
    "gmsh",
    "numba",
    "numpy",
    "pytest",
    "pyvista",
]
section-order = [
    "future",
    "standard-library",
    "mpi",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py", "petsc4py"]
